--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
+bcrypt==4.2.0
 blinker==1.7.0
 cffi==1.16.0
 click==8.1.7
 cryptography==42.0.5
 Flask==3.0.3
+flask-bcrypt==1.0.1
 itsdangerous==2.2.0
 Jinja2==3.1.3
 MarkupSafe==2.1.5
